--- a/react-meteor-meetings.scss
+++ b/react-meteor-meetings.scss
@@ -1,7 +1,8 @@
-$like: #379F7A;
-$change: #CF4647;
-$blue: #008C9E;
-$skyblue: #E0EFF1;
+$like: #c1f880;
+$change: #ff7989;
+$move-forward: #a2a8fa;
+$sky: #283665;
+$bottom-sky: #4f5aa8;
 
 html, body {
   width: 100vw;
@@ -11,10 +12,10 @@ html, body {
 }
 
 body {
-  background: -webkit-linear-gradient($skyblue, white); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient($skyblue, white); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient($skyblue, white); /* For Firefox 3.6 to 15 */
-  background: linear-gradient($skyblue, white); /* Standard syntax */
+  background: -webkit-linear-gradient($sky, $bottom-sky); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient($sky, $bottom-sky); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient($sky, $bottom-sky); /* For Firefox 3.6 to 15 */
+  background: linear-gradient($sky, $bottom-sky); /* Standard syntax */
   padding: 5px 10px;
 }
 
@@ -25,13 +26,13 @@ body {
     li {
       .like-column, .change-column {
         .like-text {
-          color: darken($like, 10);
+          color: $like;
           display: table-cell;
           line-height: 1.15em;
           padding-right: 15px;
         }
         .change-text {
-          color: darken($change, 10);
+          color: lighten($change, 5);
           display: table-cell;
           line-height: 1.15em;
           padding-right: 15px;
@@ -46,6 +47,7 @@ body {
 }
 
 .btn-like.btn {
+  color: $sky;
   background-color: $like;
   box-shadow: 0 5px darken($like, 10);
   -webkit-transition: none;
@@ -63,6 +65,7 @@ body {
 }
 
 .btn-change.btn {
+  color: $sky;
   background-color: $change;
   box-shadow: 0 5px darken($change, 10);
   -webkit-transition: none;
@@ -80,12 +83,11 @@ body {
 }
 
 button.delete {
-  background-color: $change;
+  background: none;
   border: none;
-  border-radius: 50%;
-  color: white;
-  font-size: 0.75em;
-  opacity: 0.25;
+  color: $change;
+  font-size: 1em;
+  opacity: 0.5;
   padding: 0;
   position: relative;
   text-align: center;
@@ -94,6 +96,20 @@ button.delete {
   -webkit-transition: -webkit-transform ease-out 0.1s, background 0.2s;
   -moz-transition: -moz-transform ease-out 0.1s, background 0.2s;
   transition: transform ease-out 0.1s, background 0.2s;
+}
+
+button.move-forward {
+  background-color: $move-forward;
+  border: none;
+  border-radius: 50%;
+  color: white;
+  font-weight: bold;
+  font-size: 0.75em;
+  opacity: 0.85;
+  padding: 0;
+  position: relative;
+  width: 30px;
+  height: 30px;
 }
 
 button.delete:hover {
@@ -112,18 +128,10 @@ button.delete:active {
   font-weight: 900;
 }
 
-button.move-forward {
-  color: $blue;
-  font-weight: bold;
-  background: none;
-  font-size: 1em;
-  border: none;
-  position: relative;
-  padding: 3px;
-}
+
 
 button.next-week {
-  color: $blue;
+  color: $move-forward;
   -webkit-transition: -webkit-transform 0.6s;
   transition: transform 0.6s;
 }
@@ -137,7 +145,7 @@ button.next-week:active {
 }
 
 button.last-week {
-  color: $blue;
+  color: $move-forward;
   -webkit-transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
 }
@@ -151,7 +159,7 @@ button.last-week:active {
 }
 
 form.date-form {
-  color: $blue;
+  color: $move-forward;
   height: 2rem;
 }
 
@@ -177,20 +185,21 @@ input.datepicker {
 }
 
 .input-field label {
-  color: $blue;
+  color: $move-forward;
 }
 
 .input-field textarea:focus.materialize-textarea + label {
-  color: $blue;
+  color: $move-forward;
 }
 textarea:focus.materialize-textarea {
-  border-bottom: 1 px solid $blue;
-  box-shadow: 0 1px 0 0 $blue;
+  color: white;
+  border-bottom: 1 px solid $move-forward;
+  box-shadow: 0 1px 0 0 $move-forward;
 }
 
 #login-buttons a {
   text-decoration: none;
-  color: $blue;
+  color: $move-forward;
   z-index: 1000 !important;
 }
 
@@ -208,4 +217,8 @@ textarea:focus.materialize-textarea {
 
 .hidden {
   display: none;
+}
+
+.row {
+  height: 36px;
 }
